force-app/main/default/objects/BusinessTripStrategyEvent__c/BusinessTripStrategyEvent__c.object-meta.xml
<CustomObject>
    <label>Strategy Event</label>
    <nameField>
        <displayFormat>BTSE-{00000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>