force-app/main/default/objects/BusinessTripStrategyEvent__c/fields/BusinessTripStrategy__c.field-meta.xml
<CustomField>
    <fullName>BusinessTripStrategy__c</fullName>
    <label>Business Trip Strategy</label>
    <referenceTo>BusinessTripStrategy__c</referenceTo>
    <relationshipName>Business_Trip_Strategy_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>