force-app/main/default/objects/BusinessTripStrategyEvent__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aroma Bar</fullName>
            </value>
            <value>
                <fullName>Aromatherapy Workshop</fullName>
            </value>
            <value>
                <fullName>Floral arrangement Workshop</fullName>
            </value>
            <value>
                <fullName>Dress your table</fullName>
            </value>
            <value>
                <fullName>Feng shui</fullName>
            </value>
            <value>
                <fullName>Interior design photography with a smartphone</fullName>
            </value>
            <value>
                <fullName>Lettering workshop</fullName>
            </value>
            <value>
                <fullName>Covers and paint</fullName>
            </value>
            <value>
                <fullName>Seasonal materials and colours</fullName>
            </value>
            <value>
                <fullName>Moodboard making</fullName>
            </value>
            <value>
                <fullName>Cuisinies with wine pairing</fullName>
            </value>
            <value>
                <fullName>Art exhibition</fullName>
            </value>
            <value>
                <fullName>Cooking class</fullName>
            </value>
            <value>
                <fullName>Wellness open day</fullName>
            </value>
            <value>
                <fullName>Mommy and My</fullName>
            </value>
            <value>
                <fullName>Make your own blend</fullName>
            </value>
            <value>
                <fullName>Wine and cheese</fullName>
            </value>
            <value>
                <fullName>Texture wall art workshop</fullName>
            </value>
            <value>
                <fullName>Lunch and learn</fullName>
            </value>
            <value>
                <fullName>Wood customization workshop</fullName>
            </value>
            <value>
                <fullName>Blooming tiles</fullName>
            </value>
            <value>
                <fullName>Open days</fullName>
            </value>
            <value>
                <fullName>Opening event showrooms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>